# reverse-shell

./: CMakeLists.txt  LICENSE  build.sh  main.c  makefile
src/: CMakeLists.txt
src/linux/: client.c  shell.c  shell.h
src/win/: CMakeLists.txt  client.c
